--- a/style.css
+++ b/style.css
@@ -53,6 +53,12 @@ footer {
   display: flex;
 }
 .box {
-  width: 50%;
-  padding-left: 5%;
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  box-shadow: 5px 10px 30px gray;
+  padding: 0 5%;
+}
+.box p {
+  text-align: justify;
 }
